# scour

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS  HISTORY.md  Makefile  README.md  README.txt  crunch.sh  package.sh  push.sh  pyproject.toml  release-notes.html  scour.1  scour.inkscape.py  scour.inx  scour.py  scour.sublime-project  scra.py  setup.py  statistics.html  statistics.xls  svg_regex.py  svg_transform.py  test_css.py  test_scour.py  testcss.py  testscour.py  tox.ini  web.py  webscour.py
docs/: Makefile
docs/source/: caption_CONTRIBUTING.rst  caption_README.rst  caption_cmd_lines.rst  caption_first_contribution.rst  caption_known_issues.rst  caption_performance.rst  caption_python_api.rst  conf.py  index.rst  modules.rst  scour.rst
docs/source/static/: css-style.css
fulltests/: README.fulltests.txt  foo.xml
lite/: index.html  muther.js  pdom.js  pdom_support.html  pdom_test.html  scour.js
python-modules-pre24/: fixedpoint.py
scour/: __init__.py  __main__.py  scour.py  stats.py  svg_regex.py  svg_transform.py  version.py  yocto_css.py
